--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ node_modules/*
 .env*
 !.env.example
 ngrok.yml
-site/.next/*
+/site/.next/*
+/site/.*
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
