--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,28 @@ services:
     container_name: "mongo4"
     ports:
       - '27017-27019:27017-27019'
+
+  website-client:
+    env_file:
+      - ./.env
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    links:
+      - mongo
+    depends_on:
+      - mongo
+    ports:
+      - 3000:3000
+
+  nginx:
+    env_file:
+      - ./.env
+    build:
+      context: ./nginx/
+      dockerfile: Dockerfile
+    container_name: "nginx"
+    depends_on:
+      - website-client
+    ports:
+      - '3000:80'
