--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ MAILGUN_FROM=mailgun-email
 
 INITIAL_DATA_PASSWORD=password
 RESET_PASSWORD_TOKEN_EXPIRY=86400000
+MONGODB_URI=mongodb://mongo:27017
